# ansito

./: .cookiecutterrc  .copier-answers.yml  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  ansito  coverage.ini  duties.py  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
config/: coverage.ini  ruff.toml
docs/: conf.py  index.md  spelling_wordlist.txt
docs/reference/: cli.md
scripts/: gen-readme-data.py
scripts/templates/: CREDITS.md  README.md
src/ansito/: __init__.py  __main__.py  cli.py  debug.py
tests/: __init__.py  test_cli.py
