[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "ansito"
description = "Translate ANSI codes to any other format."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://pawamoy.github.io/ansito"
Documentation = "https://pawamoy.github.io/ansito"
Changelog = "https://pawamoy.github.io/ansito/changelog"
Repository = "https://github.com/pawamoy/ansito"
Issues = "https://github.com/pawamoy/ansito/issues"
Discussions = "https://github.com/pawamoy/ansito/discussions"
Gitter = "https://gitter.im/ansito/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
ansito = "ansito.cli:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
